finished elevator commands (i think)